# NameCardKnot

./: .gitignore  .gitmodules  CLAUDE.md  README.md  flake.nix  run.sh
.github/workflows/: editor-pages.yml
.zed/: settings.json
app/: BootMessage.cpp  BootMessage.hpp  CMakeLists.txt  CardNameLabel.cpp  CardNameLabel.hpp  CardStore.cpp  CardStore.hpp  FileLoader.hpp  ImportJob.cpp  ImportJob.hpp  L8View.hpp  LastCard.cpp  LastCard.hpp  MyCardStore.cpp  MyCardStore.hpp  NameCardData.cpp  NameCardData.hpp  NameCardKnot.cpp  NameCardKnot.hpp  NameFont.hpp  NameRaster.cpp  NameRaster.hpp  Nvs.cpp  Nvs.hpp  Power.cpp  Power.hpp  Settings.cpp  Settings.hpp  SharedCardData.cpp  SharedCardData.hpp  Strings.cpp  Strings.hpp  UiFont.cpp  UiFont.hpp  lv_glyph_font.hpp  lv_image_adapter.hpp
app/resources/: lucide_font.h  resources.c  resources.h
app/resources/converted/: battery_32px.c  battery_full_32px.c  battery_low_32px.c  battery_medium_32px.c  card_sd_80px.c  cog_80px.c  images_80px.c  noto_sans_jp_24.c  noto_sans_jp_32.c  noto_sans_jp_48.c  square_arrow_right_enter_80px.c
app/screens/: AcknowledgementsScreen.cpp  AcknowledgementsScreen.hpp  AcknowledgementsText.hpp  BootMessageScreen.cpp  BootMessageScreen.hpp  DateTimeScreen.cpp  DateTimeScreen.hpp  FileBrowserScreen.cpp  FileBrowserScreen.hpp  GalleryScreen.cpp  GalleryScreen.hpp  GrayscaleTestScreen.cpp  GrayscaleTestScreen.hpp  HomeScreen.cpp  HomeScreen.hpp  HotKnotScreen.cpp  HotKnotScreen.hpp  LanguageSelectScreen.cpp  LanguageSelectScreen.hpp  NameCardScreen.cpp  NameCardScreen.hpp  ReceiveScreen.cpp  ReceiveScreen.hpp  SettingsScreen.cpp  SettingsScreen.hpp  ShareScreen.cpp  ShareScreen.hpp  SharedCardScreen.cpp  SharedCardScreen.hpp  SleepScreen.cpp  SleepScreen.hpp  TransferScreen.cpp  TransferScreen.hpp
app/test/: namecard_data_test.cpp  run.sh
components/dokan/: CMakeLists.txt
components/dokan/inc/: dokan.h  dokan_types.h
components/dokan/src/: dokan_codec.c  dokan_codec.h  dokan_descriptor.c  dokan_descriptor.h  dokan_os.h  dokan_random.c  dokan_random.h  dokan_runtime.c  dokan_session.c  dokan_session.h  dokan_sha256.c  dokan_sha256.h  dokan_sim.c  dokan_transport.c  dokan_transport.h  dokan_wifi.c  dokan_wifi_params.c  dokan_wifi_params.h
components/dokan/test/: run.sh  test_descriptor.c  test_runtime.c  test_session.c
components/dokan/test/shim/: esp_err.h
components/image_processor/: CMakeLists.txt
components/image_processor/inc/: image_processor.hpp
components/image_processor/src/: alloc.cpp  alloc.hpp  color.cpp  color.hpp  decode_job.cpp  decoder.cpp  dither.cpp  dither.hpp  image_processor.cpp  inflate.cpp  inflate.hpp  jpeg.cpp  jpeg.hpp  pack.cpp  pack.hpp  pipeline.cpp  pipeline.hpp  png.cpp  png.hpp  profile.cpp  profile.hpp  rowsource.hpp  sniff.cpp  sniff.hpp  stream.cpp  stream.hpp
components/image_processor/test/: image_processor_test.cpp  run.sh
components/namecard_pdf/: CMakeLists.txt
components/namecard_pdf/inc/: namecard_pdf.hpp
components/namecard_pdf/src/: namecard_pdf.cpp
components/namecard_pdf/test/: e2e.cpp  namecard_pdf_test.cpp  run.sh  run_e2e.sh
components/namecard_pdf/test/fixtures/: manifest.h  manifest.json
docs/: development.md  dokan.md  gotchas.md  image_processor.md  jp_glyphs.txt  mycard.md  namecard_pdf.md  testing.md  user_guide.md  user_guide_ja.md
editor/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
editor/src/: App.tsx  i18n.ts  index.css  main.tsx
editor/src/components/: DevicePreview.tsx  ImagePicker.tsx  SharePreview.tsx
editor/src/lib/: crop.ts  draft.ts  epd-preview.ts  glyph-raster.test.ts  glyph-raster.ts  image-export.ts  jp-glyphs.ts  targets.ts
editor/src/lib/namecard-pdf/: bytes.ts  constants.ts  crc32.ts  footer.ts  foundation.test.ts  gen-fixtures.ts  glyphs.ts  index.ts  pdf-reader.test.ts  pdf-reader.ts  pdf-writer.ts  pdf.test.ts  rle.ts  share-layout.test.ts  share-layout.ts
esp32/: CMakeLists.txt  sdkconfig.defaults
esp32/main/: idf_component.yml
esp32s3/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32s3/main/: main.cpp
simulator/: CMakeLists.txt
simulator/main/: lv_conf.h  main.cpp
simulator/verify/: acknowledgements.txt  datetime.txt  filebrowser.txt  language.txt  mnc_pdf.txt  mycard.txt  namecard.txt  smoke.txt
